# data-clean-openenv

./: Dockerfile  README.md  __init__.py  app.py  env.py  inference.py  local_test.py  openenv.yaml  pyproject.toml  requirements.txt  test_environment.py
environment/: datasets.py  env.py  models.py
graders/: graders.py
server/: app.py
